[project]
name = "opencv-eyes-tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "cmake>=4.1.0",
    "dlib",
    "face-recognition>=1.3.0",
    "face-recognition-models>=0.3.0",
    "matplotlib>=3.10.7",
    "numpy==1.23.5",
    "opencv-python<4.8.0",
    "pip>=25.2",
    "scipy>=1.15.3",
    "setuptools>=80.9.0",
    "wheel>=0.45.1",
]

[tool.uv.sources]
dlib = { path = "dlib-19.22.99-cp310-cp310-win_amd64.whl" }
face-recognition-models = { git = "https://github.com/ageitgey/face_recognition_models" }
